# beagleboneblack-gpio-cpp-api

./: README.md
BBB_GPIO/: analog.cpp  analog.hpp  digital.cpp  digital.hpp  utils.cpp  utils.hpp
assets/: schematic.fzz
example/: CMakeLists.txt  main.cpp
